--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container">
             <div class="header__top">
-                <nav class="nav nav--mobile">
+                <nav class="nav">
                     <div class="nav__logo">
                         <h2 class="logo"><a href="#!">GoTrip</a></h2>
                     </div>
@@ -55,7 +55,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="none">
         <section class="destinations">
             <div class="container-right">
                 <div class="destinations__row">
@@ -143,7 +143,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer none">
         <div class="container">
             <nav class="nav">
                 <div class="nav__logo">
