--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </header>
-    <main class="none">
+    <main>
         <section class="destinations">
             <div class="container-right">
                 <div class="destinations__row">
@@ -143,7 +143,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer none">
+    <footer class="footer">
         <div class="container">
             <nav class="nav">
                 <div class="nav__logo">
